--- a/dailyui.html
+++ b/dailyui.html
@@ -68,7 +68,7 @@
       <h3>App Icon</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_005" data-whatever="@mdo">
-          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.jpg">
         </a>
       </div>
       <p id="two" class="date"><br>2017-01-07</p>
@@ -150,7 +150,7 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.jpg">
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
