--- a/dailyui.html
+++ b/dailyui.html
@@ -65,7 +65,7 @@
 
     <div class="container-ui">
       <h4 class="modal-title">Daily UI - 006</h4>
-      <h3>App Icon</h3>
+      <h3>Profile Page</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_006" data-whatever="@mdo">
           <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_006.jpg">
