--- a/dailyui.html
+++ b/dailyui.html
@@ -172,7 +172,7 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_007.jpg">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_007.gif">
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
