--- a/dailyui.html
+++ b/dailyui.html
@@ -68,7 +68,7 @@
       <h3>Settings</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_007" data-whatever="@mdo">
-          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_007.jpg">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_007.png">
         </a>
       </div>
       <p id="two" class="date"><br>2017-01-10</p>
