--- a/dailyui.html
+++ b/dailyui.html
@@ -169,12 +169,12 @@
   <div class="modal-content" id="hello" >
     <ul class="shot-nav">
       <li class="shot-nav-prev" style="display:list-item">
-        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_007" data-dismiss="modal" data-whatever="@mdo">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_008" data-dismiss="modal" data-whatever="@mdo">
            <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
         </a>
       </li>
       <!--li class="shot-nav-next" style="display:list-item">
-        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_009" data-dismiss="modal" data-whatever="@mdo">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_010" data-dismiss="modal" data-whatever="@mdo">
           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
         </a>
       </li-->
@@ -225,11 +225,11 @@
            <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
         </a>
       </li>
-      <!--li class="shot-nav-next" style="display:list-item">
+      <li class="shot-nav-next" style="display:list-item">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_009" data-dismiss="modal" data-whatever="@mdo">
           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
         </a>
-      </li-->
+      </li>
     </ul>
     <div style="text-align:center;"class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -641,4 +641,3 @@
 
 </script>
 </html>
-
