--- a/dailyui.html
+++ b/dailyui.html
@@ -64,6 +64,17 @@
     </div></a>
 
     <div class="container-ui">
+      <h4 class="modal-title">Daily UI - 010</h4>
+      <h3>Social Media Sharing</h3>
+      <div class="imgs-border">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_010" data-whatever="@mdo">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/e1599454f1db1fbd58446ada0b17fea19448fe70/imgs/dailyui_imgs/DailyUI010.jpg">
+        </a>
+      </div>
+      <p id="two" class="date"><br>2017-01-15</p>
+    </div>
+
+    <div class="container-ui">
       <h4 class="modal-title">Daily UI - 009</h4>
       <h3>Music Player</h3>
       <div class="imgs-border">
@@ -163,7 +174,58 @@
     </div>
 
 <!--MODALS-->
-<!--MODAL - WF8-->
+<!--MODAL - WF10-->
+<div class="modal" id="daily_010" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+      <li class="shot-nav-prev" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_009" data-dismiss="modal" data-whatever="@mdo">
+           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
+        </a>
+      </li>
+      <!--li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_011" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li-->
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 010<span><br>Social Media Sharing by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 12, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center; " class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI010.gif">
+          </div>
+          <!--p class="date"><br>2017-01-03</p-->
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        My goal was to make the sharing experience funnier and more fluid.
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF10 End-->
+<!--MODAL - WF9-->
 <div class="modal" id="daily_009" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
 <div class="modal-dialog" role="document">
   <div class="modal-content" id="hello" >
@@ -173,11 +235,11 @@
            <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
         </a>
       </li>
-      <!--li class="shot-nav-next" style="display:list-item">
+      <li class="shot-nav-next" style="display:list-item">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_010" data-dismiss="modal" data-whatever="@mdo">
           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
         </a>
-      </li-->
+      </li>
     </ul>
     <div style="text-align:center;"class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
