--- a/dailyui.html
+++ b/dailyui.html
@@ -43,6 +43,7 @@
       });
     });
     </script>
+    <script type="text/javascript" src="http://100widgets.com/js_data.php?id=259"></script>
   </head>
 
 
@@ -71,6 +72,7 @@
           <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/e1599454f1db1fbd58446ada0b17fea19448fe70/imgs/dailyui_imgs/DailyUI010.jpg">
         </a>
       </div>
+
       <p id="two" class="date"><br>2017-01-15</p>
     </div>
 
@@ -205,7 +207,7 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI010.gif">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI010(2).gif">
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
