--- a/dailyui.html
+++ b/dailyui.html
@@ -239,7 +239,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_013.png">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_013.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_013.png">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -290,7 +292,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_012.png">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_012.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_012.png">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -341,7 +345,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_011.png">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_011.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_011.png">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -392,7 +398,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI010.gif">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI010.gif">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI010.gif">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -443,7 +451,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_009.png">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_009.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_009.png">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -495,7 +505,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/50ac06f3c4b08cb8f74ed3b75d0b93506d23e6cb/imgs/dailyui_imgs/DailyUI_008.jpg">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/50ac06f3c4b08cb8f74ed3b75d0b93506d23e6cb/imgs/dailyui_imgs/DailyUI_008.jpg">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/50ac06f3c4b08cb8f74ed3b75d0b93506d23e6cb/imgs/dailyui_imgs/DailyUI_008.jpg">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -546,7 +558,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/8c7d0ce489bee5f7effca484378fe0b886d06825/imgs/dailyui_imgs/DailyUI_007.gif">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/8c7d0ce489bee5f7effca484378fe0b886d06825/imgs/dailyui_imgs/DailyUI_007.gif">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/8c7d0ce489bee5f7effca484378fe0b886d06825/imgs/dailyui_imgs/DailyUI_007.gif">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -597,7 +611,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/26c6b65344b735ae361cbe326706733f5273013e/imgs/dailyui_imgs/DailyUI_006.gif">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/26c6b65344b735ae361cbe326706733f5273013e/imgs/dailyui_imgs/DailyUI_006.gif">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/26c6b65344b735ae361cbe326706733f5273013e/imgs/dailyui_imgs/DailyUI_006.gif">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -650,7 +666,9 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.jpg">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.jpg">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.jpg">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -703,7 +721,9 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -755,7 +775,9 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.jpg">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.jpg">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.jpg">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -807,7 +829,9 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
@@ -855,7 +879,9 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
+            </a>
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
