--- a/dailyui.html
+++ b/dailyui.html
@@ -49,7 +49,7 @@
 
   <body id="zero" style="position: relative; background-color:#f4f4f4;">
     <div id="one" class="top-bar">
-      Oscar Lund
+      <a style="" target="_blank" rel="noreferrer" href="mailto:hello@oscarlund.com">hello@oscarlund.com</a>
     </div>
     <div class="top-bar2">
       Oscar Lund
