--- a/dailyui.html
+++ b/dailyui.html
@@ -48,6 +48,7 @@
 
 
   <body id="zero" style="position: relative; background-color:#f4f4f4;">
+
     <div id="one" class="top-bar">
       <a style="" target="_blank" rel="noreferrer" href="mailto:hello@oscarlund.com">hello@oscarlund.com</a>
     </div>
@@ -63,6 +64,17 @@
       DOWN<br>
       <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
     </div></a>
+
+    <div class="container-ui">
+      <h4 class="modal-title">Daily UI - 019</h4>
+      <h3>Leader Board</h3>
+      <div class="imgs-border">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_019" data-whatever="@mdo">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_019.png">
+        </a>
+      </div>
+      <p id="two" class="date"><br>2017-01-29</p>
+    </div>
 
     <div class="container-ui">
       <h4 class="modal-title">Daily UI - 018</h4>
@@ -263,6 +275,59 @@
     </div>
 
 <!--MODALS-->
+<!--MODAL - WF19-->
+<div class="modal" id="daily_019" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+      <li class="shot-nav-prev" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_018" data-dismiss="modal" data-whatever="@mdo">
+           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
+        </a>
+      </li>
+      <!--li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_020" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li-->
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 019<span><br>Leader Board by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 29, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center; " class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_019.png">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_019.png">
+            </a>
+          </div>
+          <!--p class="date"><br>2017-01-03</p-->
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        A leader board from a fictive "keep track of your running" application. Follow, challenge and beat your friends in daily running.
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF19 End-->
 <!--MODAL - WF18-->
 <div class="modal" id="daily_018" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
 <div class="modal-dialog" role="document">
@@ -273,11 +338,11 @@
            <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
         </a>
       </li>
-      <!--li class="shot-nav-next" style="display:list-item">
+      <li class="shot-nav-next" style="display:list-item">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_019" data-dismiss="modal" data-whatever="@mdo">
           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
         </a>
-      </li-->
+      </li>
     </ul>
     <div style="text-align:center;"class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
