--- a/dailyui.html
+++ b/dailyui.html
@@ -55,22 +55,33 @@
     <div class="top-bar2">
       Oscar Lund
     </div>
-
+<!--
     <a class="scroll-up"><div class="float-bar2">
-      UP<br>
+      UP<br> -->
       <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
-    </div></a>
+    <!--</div></a>
     <a class="scroll"><div class="float-bar">
-      DOWN<br>
+      DOWN<br> -->
       <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
-    </div></a>
+    <!--</div></a>-->
+
+    <div class="container-ui">
+      <h4 class="modal-title">Daily UI - 022</h4>
+      <h3>Search</h3>
+      <div class="imgs-border">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_021" data-whatever="@mdo">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_22.gif">
+        </a>
+      </div>
+      <p id="two" class="date"><br>2017-02-11</p>
+    </div>
 
     <div class="container-ui">
       <h4 class="modal-title">Daily UI - 021</h4>
       <h3>Home Monitoring</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_021" data-whatever="@mdo">
-          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_21.gif">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUi_21.jpg">
         </a>
       </div>
       <p id="two" class="date"><br>2017-02-11</p>
